course1/public/app.css
/* ... */
.well.out {
  width: var(--outer-well-width);
}

.main-column + .well,
.well + .main-column {
  margin-top: var(--main-column-to-well-margin);
}

.well > .well:last-child {
  margin-bottom: var(--last-child-well-margin-bottom);
}

.main-column:has(+ #end-of-page-elt) {
  margin-bottom: var(--end-of-page-main-column-margin-bottom);
}

.well:has(+ #end-of-page-elt) {
  margin-bottom: var(--end-of-page-well-margin-bottom);
}

.well:has(+ #end-of-page-elt + #bottom-menu-hr) {
  margin-bottom: calc(var(--end-of-page-well-margin-bottom) + 0.3rem);
}

#end-of-page-elt {
  height: 1px;
  width: 100%;
  margin-top: 0;
  padding-bottom: var(--end-of-page-elt-padding-bottom);
}

ul,
ol {
  list-style-position: outside;
  padding-left: 0.5rem;
  margin-left: var(--nested-ul-ol-margin-left);
  margin-right: var(--nested-ul-ol-margin-right);
}

ul:not(li > ul),
ol:not(li > ol) {
  margin-top: 0.7em;
  margin-bottom: 0.7em;
  margin-left: var(--ul-ol-margin-left);
  margin-right: var(--ul-ol-margin-right);
}

li {
  margin: 0.2em 0;
}

li > p:first-child {
  display: inline;
}

pre {
  line-height: 1.6;
  color: var(--pre-text);
  border: var(--pre-border);
  background-color: var(--pre-background-color);
  font-size: 0.9rem;
  white-space: pre-wrap;
  width: 100%;
  margin: 2ch auto;
  padding: 1.3rem 1.5rem;
  overflow-x: var(--pre-overflow-x);
  overflow-y: visible;
  text-wrap: nowrap;
}

p {
  line-height: var(--line-height);
  overflow: visible;
}

p:has(> mjx-container) {
  /* these are variables because in 'author mode'
     we override them to 'visible' in order for 
     tooltips to show (see app.js) */
  overflow-x: var(--p-hasmathjax-overflow-x);
  overflow-y: var(--p-hasmathjax-overflow-y);
}

p:has(> mjx-container)::-webkit-scrollbar {
  display: none;
}

.statement,
.remark {
  background-color: rgb(216, 237, 225);
}

.highlight {
  background-color: rgb(250, 240, 219);
}

.highlight .statement,
.statement .statement,
.highlight > .highlight {
  background-color: #f0ffff;
}

.highlight .highlight .statement,
.highlight .highlight .remark,
.highlight .highlight .highlight {
  background-color: #d9edf7;
}

.exercise {
  background-color: #e8e4d6;
}

.remark {
  background-color: #f0ffff;
}

.alert-info {
  background-color: #d9edf7;
}

.alert-warning {
  background-color: #fce1be;
}

.qed {
  float: right;
}

p:has(> span.qed):not(:has(> *:not(span.qed))):last-child {
  padding: 0.6rem 0;
}

.nowrap {
  white-space: nowrap;
}

.index {
  margin-top: 2rem;
}

.index__header {
  max-width: calc(100vw - 2rem);
  margin: 0 auto;
  text-align: center;
  padding-top: var(--index-header-padding-top);
  padding-bottom: var(--index-header-padding-bottom);
}

.index__header__title {
  font-size: var(--index-header-title-font-size);
  line-height: var(--index-header-title-line-height);
  font-weight: normal;
}

.index__header__subtitle {
  padding-top: 0.5rem;
  font-size: var(--index-header-subtitle-font-size);
  line-height: 1.5;
  display: block;
  margin: auto;
}

.index__toc {
  max-width: var(--index-toc-max-width);
  line-height: 1.8rem;
  padding-bottom: var(--index-toc-padding-bottom);
  padding-left: 0;
  margin: 0 auto;
}

.index__toc a {
  color: #337ab7;
  text-decoration: none;
}

.index__toc ol {
  list-style-type: none;
  counter-reset: item;
  margin: 0;
  padding: 0;
}

.index__toc li {
  display: table;
  counter-increment: item;
  margin-bottom: var(--index-toc-chapter-level-margin);
}

.index__toc li:before {
  display: table-cell;
  content: counters(item, ".") ". ";
  padding-right: 0.4em;
}

.index__toc li li {
  margin: var(--index-toc-subchapter-level-margin) 0 0em;
}

.index__toc li li:before {
  content: counters(item, ".") " ";
  padding-right: 0.5em;
}

#top-menu.menu--hidden {
  top: -100px;
}

#top-menu {
  display: flex;
  position: var(--top-menu-position);
  top: 0;
  left: var(--top-menu-left);
  z-index: 2;
  width: 100vw;
  transition: top 0.5s ease-in-out;
  will-change: top;
  padding: var(--top-menu-padding-y) var(--top-menu-padding-x)
  calc(var(--top-menu-padding-y) * 0.8);
  background-color: var(--top-menu-background-color);
  flex-direction: column;
  gap: var(--top-menu-element-gap);
  font-size: var(--top-menu-font-size);
  pointer-events: none;
}

.menu-row {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.menu-row-right {
  text-align: right;
}

#bottom-menu a,
#top-menu a {
  color: #222;
  position: relative;
  pointer-events: auto;
}

#bottom-prev-page-tooltip,
#bottom-next-page-tooltip,
#top-prev-page-tooltip,
#top-next-page-tooltip {
  white-space: nowrap;
  position: absolute;
  background-color: rgb(255, 188, 246);
  border: 1.4px solid black;
  border-radius: 0.05em;
  font-size: 0.7em;
  padding: 0.15em 0.45em;
  line-height: 1;
}

#top-prev-page-tooltip,
#top-next-page-tooltip {
  top: 1.9em;
}

#top-prev-page-tooltip {
  left: 0%;
}

#top-next-page-tooltip {
  right: 0%;
}

#bottom-menu-hr {
  margin: var(--bottom-menu-hr-margin-top) auto
    var(--bottom-menu-hr-margin-bottom);
  display: var(--bottom-menu-hr-display);
  border-color: black;
  border-width: 0px;
  border-top-width: 1px;
  border-style: solid;
  width: calc(100vw - 2 * var(--main-column-padding-x));
}

#bottom-menu {
  display: var(--bottom-menu-display);
  position: var(--bottom-menu-position);
  padding: var(--bottom-menu-padding-y) var(--bottom-menu-padding-x);
  justify-content: space-between;
  bottom: 0px;
  width: 100vw;
  left: var(--bottom-menu-left);
  margin: var(--bottom-menu-margin);
  pointer-events: none;
}

#bottom-menu a {
  line-height: var(--line-height);
}

#bottom-menu-left,
#bottom-menu-right {
  display: flex;
  flex-direction: column;
}

#bottom-menu-right {
  text-align: right;
}

#bottom-prev-page-tooltip,
#bottom-next-page-tooltip {
  bottom: 1.95em;
}

#bottom-prev-page-tooltip {
  left: 0%;
}

#bottom-next-page-tooltip {
  right: 0%;
}

.arbitrary-prompt {
  color: var(--arbitrary-prompt);
}
/* ... */

